tests/baselines/reference/tsxTypeArgumentPartialDefinitionStillErrors.errors.txt
tests/cases/compiler/file.tsx(11,1): error TS2605: JSX element type 'string' is not a constructor function for JSX elements.
tests/cases/compiler/file.tsx(11,14): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/file.tsx (2 errors) ====
    declare namespace JSX {
        interface Element {
            render(): Element | string | false;
        }
    }
    
    function SFC<T>(props: Record<string, T>) {
        return '';
    }
    
    <SFC<string> prop={1}></SFC>; // should error
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2605: JSX element type 'string' is not a constructor function for JSX elements.
                 ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    